Updated schemas once again
